# network-scanner

./: .gitignore  README.md  pyproject.toml
netscan/: __init__.py  config.py
netscan/core/: __init__.py  engine.py  models.py
netscan/output/: __init__.py  logger.py
netscan/scanner/: __init__.py  banner.py  base.py  syn_scan.py  tcp_connect.py
netscan/utils/: network.py  validators.py
tests/: test_engine.py  test_models.py  test_syn_scan.py  test_tcp_connect.py  test_validators.py
