[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "network-scan"
version     = "0.1.0"
description = "A modular, production-style network port scanner"
readme      = "README.md"
requires-python = ">=3.10"

dependencies = [
    "scapy>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov",
    "ruff",
]

[project.scripts]
netscan = "netscan.cli:main"

[tool.ruff]
line-length = 88
select      = ["E", "F", "I"]